Correction d'un bug.